--- a/contatos.html
+++ b/contatos.html
@@ -22,7 +22,7 @@
         </div>
     </main>
     <header>
-            <ol><h1> Você poderá entrar em contato comigo através do WhatsApp, E-mail, twitter ou até Instagram!!</h1>
+            <ol><h1> WhatsApp, E-mail, twitter e Instagram para entrar contanto comigo são esses! </h1>
             <h1>Número: 27 996520810</h1>
             <h1>Email: murilorzc@gmail.com</h1>
             </ol>
